# weather

./: .gitignore  pyproject.toml
src/: main.py
src/data/: loader.py
src/features/: scaling.py  sequences.py
src/models/: lstm_model.py  prediction.py  training.py
src/saved_models/: scaler.pkl  weather_lstm_model.h5
src/utils/: paths.py
